--- a/RacingDual.client/package.json
+++ b/RacingDual.client/package.json
@@ -15,7 +15,8 @@
     "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.26",
     "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "vue-scroll-fixed-navbar": "^0.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "3.0.3",
